formatting, gradient animation

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
-    "typeface-special-elite": "0.0.54"
+    "typeface-special-elite": "0.0.54",
+    "typeface-titillium-web": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
